Agrego vistas + modificaciones mínimas